--- a/frontend/components/checkins/checkins-pug.component.pug
+++ b/frontend/components/checkins/checkins-pug.component.pug
@@ -18,23 +18,23 @@
         input#sunday(type='radio', name='week')
         ul.tabs
             li
-                label(for='week-list') All-QQ
+                label(for='week-list') QQ
             li
-                label(for='monday') Monday
+                label(for='monday') Mo
             li
-                label(for='tuesday') Tuesday
+                label(for='tuesday') Tu
             li
-                label(for='wednesday') Wednesday
+                label(for='wednesday') We
             li
-                label(for='thursday') Thursday
+                label(for='thursday') Th
             li
-                label(for='friday') Friday
+                label(for='friday') Fr
             li
-                label(for='saturday') Saturday
+                label(for='saturday') Sa
             li
-                label(for='sunday') Sunday
+                label(for='sunday') Su
         section.tab.all
-            label(for='week-list') All QQ
+            label(for='week-list') Questions List
             div
                 ul.content
                     li.qq 09:30
@@ -121,13 +121,21 @@
                                 .slider.round
         section.tab.th
             label(for='thursday') Thursday
-            div Thursday Content
+            div
+                ul.content
+                    li.qq Thursday: questions list is empty
         section.tab.fr
             label(for='friday') Friday
-            div Friday Content
+            div
+                ul.content
+                    li.qq Friday: questions list is empty
         section.tab.sa
             label(for='saturday') Saturday
-            div Saturday Content
+            div
+                ul.content
+                    li.qq Saturday: questions list is empty
         section.tab.su
             label(for='sunday') Sunday
-            div Sunday Content
+            div
+                ul.content
+                    li.qq Sunday: questions list is empty
