--- a/frontend/components/checkinsInfo/checkinsInfo-pug.component.pug
+++ b/frontend/components/checkinsInfo/checkinsInfo-pug.component.pug
@@ -1,24 +1,20 @@
 .checkins-answer-wrapper
     .checkins-answer
         .header-answer
-            div
-                nav
-                    ul.control-btn
-                        li
-                            a(ng-link='["CheckinsCreate"]')
-                                i.fa.fa-pencil.fa-2x
-                        li
-                            a(href='')
-                                i.fa.fa-trash.fa-2x
-                    ul.close-btn
-                        li
-                            a(ng-link='["Checkins"]')
-                                i.fa.fa-times.fa-2x
+            .close-btn
+                a(ng-link='["Checkins"]')
+                    i.fa.fa-times.fa-2x
             h2 Do you have any ideas for a future show?
-            button Add your answer
+            .control-btn
+                a(href='')
+                    i.fa.fa-commenting-o.fa-3x
+                a(ng-link='["CheckinsCreate"]')
+                    i.fa.fa-pencil-square-o.fa-3x
+                a(href='')
+                    i.fa.fa-trash-o.fa-3x
         .main-answer
             ul.qq-list
-                h3 Thursday, July 14
+                h4 Thursday, July 14
                 li.list
                     span.name Steve Marsh
                     br
@@ -27,7 +23,7 @@
                     span.name Josh Fiske
                     br
                     span I just went to Speedy Car Wash. That was kind of a blast from the past.
-                h3 Wednesday, July 13
+                h4 Wednesday, July 13
                 li.list
                     span.name Nicole Katz
                     br
@@ -42,7 +38,7 @@
                     span
                         | Zildjian! They have to have been around forever. I don't think I can even name another
                         | symbol.
-                h3 Tuesday, July 12
+                h4 Tuesday, July 12
                 li.list
                     span.name Cheryl Walters
                     br
