Still working on add menu

--- a/frontend/components/reports/reportAdd.template.pug
+++ b/frontend/components/reports/reportAdd.template.pug
@@ -8,34 +8,31 @@
                 .col-xs-12
                     .row.center-xs
                         .col-xs-11
+                            .row.generate-item-header.middle-xs
+                                .col-xs-2 Type:
+                                .col-xs-9
+                                    .generate-item.fa.fa-minus Task
+                                .col-xs-1.fa.fa-angle-down.button.f-btn
                             .row
-                                .col-xs-3 Type
-                                .col-xs-8 Field
+                                .col-xs-12.generate-item-holder
+                                    span.generate-item.fa.fa-plus  All
+                                    span.generate-item.fa.fa-plus  Message
+                                    span.generate-item.fa.fa-plus  Event
+                            .row.generate-item-header.middle-xs
+                                .col-xs-2 User:
+                                .col-xs-9
                                 .col-xs-1.fa.fa-angle-left.button.f-btn
                             .row
-                                .col-xs-12
-                                    span.fa.fa-plus
-                                    span.fa.fa-plus
-                                    span.fa.fa-plus
-                                    span.fa.fa-plus
-                                    span.fa.fa-plus
-                            .row
-                                .col-xs-3 User
-                                .col-xs-8 Field
-                                .col-xs-1.fa.fa-angle-left.button.f-btn
-                            .row
-                                .col-xs-12
-                                    span.fa.fa-plus
-                                    span.fa.fa-plus
-                                    span.fa.fa-plus
-                                    span.fa.fa-plus
-                                    span.fa.fa-plus
-                            .row
-                                .col-xs-3 Date
-                                .col-xs-2 From
+                                .col-xs-12.generate-item-holder
+                            .row.generate-item-header.middle-xs
+                                .col-xs-2 Date:
+                                .col-xs-2.center-xs From:
                                 input(type="date").col-xs-3
-                                .col-xs-1 To
+                                .col-xs-1.col-xs-1.center-xs To:
                                 input(type="date").col-xs-3
                     .row
                         span.button.btn.col-xs-4.col-xs-offset-4 Generate
-            
+                    .row.start-xs
+                        span.chapter-title.col-xs-10 History
+                            .fa.fa-history
+
