--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -73,8 +73,38 @@
                  font-family "Open Sans"
             .item-row
                 margin-bottom 2%
-                
-                
+    .generate-holder
+        .generate-item-header
+            background-color #d8d8d8
+            border-bottom 1px solid border-grey
+            font-size 18px
+            font-family "Montserrat"
+            padding 1%
+            text-align left
+            border-radius 5px
+            [type='date']
+                font-size 15px
+        .generate-item-holder
+            padding 1%
+            flex-wrap wrap
+            display flex
+            align-items center
+            justify-content space-around
+            border-bottom 1px solid border-grey
+        .generate-item
+            cursor pointer
+            background-color add-text-color
+            padding 1%
+            margin 1%
+            border-radius 5px
+            box-shadow 0px 2px 3px 2px  border-grey
+            font-size 18px
+            font-family "Open Sans"
+            color black
+            &::before
+                color main-blue
+                display inline
+                font-family "FontAwesome"
     .button
         button()
     .btn
@@ -90,4 +120,3 @@
         font-size 25px
         div
             padding 2%
-            
