day calendar start, header finish (no style)

--- a/frontend/components/test/test.pug
+++ b/frontend/components/test/test.pug
@@ -1,1 +1,10 @@
-h2.test QQQ
+header.day-header
+    i.fa.fa-chevron-left(ng-click='ts.changeDateOfStep(-1)')
+    span.current-day
+        span.show-current-day(ng-click='ts.startChangeDate()')
+            |{{ts.currentDate| date: 'd MMM yyyy'}}
+        div(uib-datepicker='', datepicker-options='options', show-button-bar='false', ng-model='ts.currentDate', ng-if='ts.isChangeDate', ng-click='ts.endChangeDate()')
+    i.fa.fa-chevron-right(ng-click='ts.changeDateOfStep(1)')
+
+    //div(style='display:inline-block; min-height:290px;')
+    //  .well.well-sm(uib-datepicker='', ng-model='dt', datepicker-options='options')
