--- a/frontend/components/test/test.styl
+++ b/frontend/components/test/test.styl
@@ -1,10 +1,12 @@
-.day-header
-    border 1px solid red
-    width 80%
-    .current-day
-        div
-            position absolute
-            top 10%
-            left 15%
-            width 300px
-            height 225px
+.calendar-day
+    .day-header
+        border 1px solid red
+        width 80%
+        .current-day
+            div
+                position absolute
+                top 10%
+                left 15%
+                width 300px
+                height 225px
+    //.day-body
