--- a/frontend/components/test/test.pug
+++ b/frontend/components/test/test.pug
@@ -4,13 +4,13 @@ section.calendar-day
         span.current-day
             span.show-current-day(ng-click='ts.startChangeDate()')
                 |{{ts.currentDate| date: 'd MMM yyyy'}}
-            div(uib-datepicker='', datepicker-options='options', show-button-bar='false', ng-model='ts.currentDate', ng-if='ts.isChangeDate', ng-click='ts.endChangeDate()')
+            div.datepicker(uib-datepicker='', datepicker-options='options', show-button-bar='false', ng-model='ts.currentDate', ng-if='ts.isChangeDate', ng-click='ts.endChangeDate()')
         i.fa.fa-chevron-right(ng-click='ts.changeDateOfStep(1)')
     section.day-body
         table.day-in-table
             tbody
-                tr.hour-row(ng-repeat='timeSt in ts.timeStamps')
+                tr.hourRow(ng-repeat='timeSt in ts.timeStamps')
                     td.hourCell
                         |{{timeSt.value}}:00
-                    td.events
+                    td.infoCell
                         |Events
