--- a/frontend/components/test/test.styl
+++ b/frontend/components/test/test.styl
@@ -1,12 +1,52 @@
 .calendar-day
+    width 80%
+    margin-left 10%
     .day-header
-        border 1px solid red
-        width 80%
+        display flex
+        justify-content space-around
+        align-items center
+        border 1px solid #ADADAD
+        background-color #F5F5F5
+        border-radius 10px
+        i
+            color #1D8DBF
+            font-size 2em
+            &:hover
+                color #260595
+
         .current-day
-            div
+            .show-current-day
+                font-size 1.8em
+            .datepicker
                 position absolute
-                top 10%
-                left 15%
+                background-color #F5F5F5
+                top 20%
+                left 35%
                 width 300px
                 height 225px
-    //.day-body
+                z-index 999
+    .day-body
+        z-index 1
+        margin 10px 0
+        background-color #F5F5F5
+        .day-in-table
+            margin-bottom: 0;
+            width: 100%
+            .hourRow
+                box-sizing border-box
+                .hourCell
+                    color #212121
+                    padding 1%
+                    width 7%
+                    background-color #ADADAD
+                    border-style solid
+                    border-width 1px
+                    border-color #808080
+                    white-space nowrap
+                    text-overflow clip
+                    overflow: hidden
+                .infoCell
+                    border 1px solid #808080
+                    text-align center
+                    width 93%
+                    position relative
