--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -17,6 +17,7 @@
             margin-bottom 0.83em
         hr
             margin-top -4%
+            box-sizing: content-box
             width 40%
             height 1px
             background-color #616161
