--- a/frontend/components/events/eventEdit.component.pug
+++ b/frontend/components/events/eventEdit.component.pug
@@ -2,26 +2,39 @@
   section.row.center-xs
     .main.col-xs-7
       .head
-        h1 Event name
+        div
+          h1 {{$ctrl.curEvent.title}}
+          i.fa.fa-pencil(ng-click="$ctrl.editTitle=true",ng-if="!$ctrl.editTitle")
+          i.fa.fa-check(ng-click="$ctrl.edit('title')",ng-if="$ctrl.editTitle")
         i.fa.fa-times.fa-2x(aria-hidden='true',ng-click="$ctrl.location.path('/events')")
       form(name='editEvent')
         .title
-          input(type='text',name='eventTitle',ng-model="$ctrl.title")
+          input(type='text',name='eventTitle',ng-model="$ctrl.title",ng-if="$ctrl.editTitle",placeholder="{{$ctrl.curEvent.title}}")
         .date
           .dataPicker
             h1 Start Date
-            .picker
-              input.form-control(type='text', uib-datepicker-popup='{{format}}', ng-model='$ctrl.date', is-open='$ctrl.popup.opened', ng-required='true', close-text='Close', alt-input-formats='altInputFormats',placeholder="{{$ctrl.date}}")
+            p {{$ctrl.curEvent.startDate}}
+            i.fa.fa-pencil(ng-click="$ctrl.editStartDate=true",ng-if="!$ctrl.editStartDate")
+            i.fa.fa-check(ng-click="$ctrl.edit('startDate')",ng-if="$ctrl.editStartDate")
+            .picker(ng-if="$ctrl.editStartDate")
+              input.form-control(type='text', uib-datepicker-popup='{{format}}', ng-model='$ctrl.date', is-open='$ctrl.popup.opened', ng-required='true', close-text='Close', alt-input-formats='altInputFormats',placeholder="{{$ctrl.curEvent.startDate}}")
               a.btn.btn-default(type='button', ng-click='$ctrl.open()')
                 i.fa.fa-calendar(aria-hidden='true')
-            h1 End Date
-            .picker
-              input.form-control(type='text', uib-datepicker-popup='{{format}}', ng-model='$ctrl.endDate', is-open='$ctrl.popup1.opened', ng-required='true', close-text='Close', alt-input-formats='altInputFormats',placeholder="{{$ctrl.endDate}}")
+            h1 End Date 
+            p {{$ctrl.curEvent.endDate}}
+            i.fa.fa-pencil(ng-click="$ctrl.editEndDate=true",ng-if="!$ctrl.editEndDate")
+            i.fa.fa-check(ng-click="$ctrl.edit('endDate')",ng-if="$ctrl.editEndDate")
+            .picker(ng-if="$ctrl.editEndDate")
+              input.form-control(type='text', uib-datepicker-popup='{{format}}', ng-model='$ctrl.endDate', is-open='$ctrl.popup1.opened', ng-required='true', close-text='Close', alt-input-formats='altInputFormats',placeholder="{{$ctrl.curEvent.endDate}}")
               a.btn.btn-default(type='button', ng-click='$ctrl.open1()')
                 i.fa.fa-calendar(aria-hidden='true')
-        h1 Description
-        textarea(ng-model = "$ctrl.desc")
+        h1  Description 
+        p {{$ctrl.curEvent.description}}
+        i.fa.fa-pencil(ng-click="$ctrl.editDescription=true",ng-if="!$ctrl.editDescription")
+        i.fa.fa-check(ng-click="$ctrl.edit('description')",ng-if="$ctrl.editDescription")
+        textarea(ng-model = "$ctrl.desc",ng-if="$ctrl.editDescription")
         .participants
+          h1 Participants
           i.fa.fa-user(aria-hidden='true')
           select(ng-change = "$ctrl.participantUpdate()" ng-model = "$ctrl.userToAdd")
             option(ng-repeat="user in $ctrl.users track by $index" value="{{user._id}}") {{user.email}}
@@ -30,10 +43,8 @@
               .participantTitle {{$ctrl.getUserNameById(userid)}}
               .deleteButton(ng-click = "$ctrl.participantDelete(userid)")
                 i.fa.fa-times.fa-fw
-          a()
-            i.fa.fa-plus(aria-hidden='true')
         .period
           div
             | Is all day
-            input(type='checkbox',ng-model="$ctrl.allDay")
+            input(type='checkbox',ng-model="$ctrl.allDay",ng-checked='$ctrl.curEvent.isAllDay')
           button(type='submit', form='eventEdit', value='Submit',ng-click="$ctrl.save()") Save
