--- a/frontend/components/menu/menu-pug.component.pug
+++ b/frontend/components/menu/menu-pug.component.pug
@@ -17,6 +17,10 @@ aside.side-menu-wrapper
                     i.fa.fa-calendar-check-o.fa-2x
                     span.nav-text Check-ins
             li
+                a(ng-link='["Checkins2"]')
+                    i.fa.fa-calendar-check-o.fa-2x
+                    span.nav-text Check-ins2
+            li
                 a(ng-link='["Tasks"]')
                     i.fa.fa-tasks.fa-2x
                     span.nav-text Tasks
