create indicator view

--- a/frontend/directives/timeIndicator/timeIndicator.styl
+++ b/frontend/directives/timeIndicator/timeIndicator.styl
@@ -1,3 +1,6 @@
-h2
-    text-align center
-    background-color pink
+.time-indicator
+    width 80%
+    margin-left 10%
+    height 1px
+    border none
+    background-color  red
