--- a/frontend/directives/timeIndicator/timeIndicator.styl
+++ b/frontend/directives/timeIndicator/timeIndicator.styl
@@ -1,6 +1,9 @@
 .time-indicator
-    width 80%
-    margin-left 10%
+    margin 0
+    padding 0
+    width 100%
+    z-index 3
+    position relative
     height 1px
     border none
     background-color  red
