--- a/frontend/components/calendar/calendarDaily/calendarDaily.pug
+++ b/frontend/components/calendar/calendarDaily/calendarDaily.pug
@@ -7,9 +7,8 @@ section.calendar-day
             div.datepicker(uib-datepicker='', datepicker-options='options', show-button-bar='false', ng-model='cd.currentDate', ng-if='cd.isChangeDate', ng-click='cd.endChangeDate()')
         i.fa.fa-chevron-right(ng-click='cd.changeDateOfStep(1)')
     section.day-body
-        table#dailyCalendar.day-in-table
+        table.day-in-table
             tbody
-                //time-indicator(table='dailyCalendar')
                 tr.hourRow(ng-repeat='timeSt in cd.timeStamps')
                     td.hourCell
                         |{{timeSt.value}}:00
