Question list from database

--- a/frontend/components/checkins/checkins-pug.component.pug
+++ b/frontend/components/checkins/checkins-pug.component.pug
@@ -35,51 +35,14 @@
                 label(for='sunday') Su
         section.tab.all
             label(for='week-list') Questions List
-            div
+            div(ng-repeat="checkin in check.checkIns track by $index")
                 ul.content
-                    li.qq 09:30
                     li.qq
-                        a(ng-link='["CheckinsInfo"]') Do you have any ideas for a future show?
+                        a(ng-link='["CheckinsInfo"]') {{checkin.question}}
                     li.qq
                         div
                             label.switch
-                                input(type='checkbox', checked='checked')
-                                .slider.round
-                ul.content
-                    li.qq 12:30
-                    li.qq
-                        a(ng-link='["CheckinsInfo"]') What did you work on today?
-                    li.qq
-                        div
-                            label.switch
-                                input(type='checkbox')
-                                .slider.round
-                ul.content
-                    li.qq 12:30
-                    li.qq
-                        a(ng-link='["CheckinsInfo"]') What are you working on?
-                    li.qq
-                        div
-                            label.switch
-                                input(type='checkbox', checked='checked')
-                                .slider.round
-                ul.content
-                    li.qq 12:30
-                    li.qq
-                        a(ng-link='["CheckinsInfo"]') See anything great lately that inspired you?
-                    li.qq
-                        div
-                            label.switch
-                                input(type='checkbox')
-                                .slider.round
-                ul.content
-                    li.qq 12:30
-                    li.qq
-                        a(ng-link='["CheckinsInfo"]') Are you blocked on anything?
-                    li.qq
-                        div
-                            label.switch
-                                input(type='checkbox', checked='checked')
+                                input(type='checkbox', ng-click="check.turnOn(checkin)",ng-checked="checkin.isTurnedOn",ng-model="checkin.isTurnedOn")
                                 .slider.round
         section.tab.mo
             label(for='monday') Monday
