Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/tasks/tasksStyles.styl
+++ b/frontend/components/tasks/tasksStyles.styl
@@ -55,4 +55,9 @@
 						color #25373D
 						&:hover
 							box-shadow: 0 0 7px #3498db
+		.wrapper_task
+			margin 20px 0
+			border 1px solid gray
+			padding 7px 0
+			border-radius 7px
 		
