Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/tasks/tasksStyles.styl
+++ b/frontend/components/tasks/tasksStyles.styl
@@ -60,4 +60,16 @@
 			border 1px solid gray
 			padding 7px 0
 			border-radius 7px
+			background-color #212121
+			color white
+			font-family "Montserrat"
+			i
+				font-size 24px
+				cursor pointer
+			.task_todos
+				background-color white
+				color black
+				.toDo_dedcription
+					font-size 12px
+					color gray
 		
