--- a/frontend/components/events/eventList.component.pug
+++ b/frontend/components/events/eventList.component.pug
@@ -43,6 +43,6 @@
                             i.fa.fa-comment.fa-2x
                             i.fa.fa-rss.fa-2x
                     .event-body
-                        p {{event.description}}
+                        p(ng-bind-html="event.description")
                 
                 
