--- a/frontend/components/events/eventCreate.component.pug
+++ b/frontend/components/events/eventCreate.component.pug
@@ -20,7 +20,7 @@
               a.btn.btn-default(type='button', ng-click='$ctrl.open1()')
                 i.fa.fa-calendar(aria-hidden='true')
         h1 Description
-        textarea(ng-model = "$ctrl.desc")
+        textarea(ng-model = "$ctrl.desc",ckeditor)
         .participants
           i.fa.fa-user(aria-hidden='true')
           select(ng-change = "$ctrl.participantUpdate()" ng-model = "$ctrl.userToAdd")
