--- a/frontend/components/reports/reportAdd.template.pug
+++ b/frontend/components/reports/reportAdd.template.pug
@@ -3,11 +3,17 @@
         .col-xs-10.reports-holder
             .row.reports-header
                 h3.col-xs-10 Report Generating
-                .col-xs-1.col-xs-offset-1.fa.fa-close.button.font-button
+                .col-xs-1.col-xs-offset-1.fa.fa-close.button.font-button(ng-link="['Reports']")
             .row.generate-holder.center-xs
                 .col-xs-12
                     .row.center-xs
                         .col-xs-11
+                            .row.generate-item-header.middle-xs
+                                .col-xs-2 Title:
+                                input(type='text').col-xs-10
+                            .row.generate-item-header.middle-xs
+                                .col-xs-2 Description:
+                                input(type='text').col-xs-10
                             .row.generate-item-header.middle-xs
                                 .col-xs-2 Type:
                                 .col-xs-9
