--- a/frontend/components/reports/reportAdd.template.pug
+++ b/frontend/components/reports/reportAdd.template.pug
@@ -1,6 +1,6 @@
 .reports-wrapper
     .row.center-xs
-        .col-xs-10.reports-holder
+        .col-xs-12.col-md-10.reports-holder
             .row.reports-header
                 h3.col-xs-10 Report Generating
                 .col-xs-1.col-xs-offset-1.fa.fa-close.button.font-button(ng-link="['Reports']")
@@ -17,13 +17,18 @@
                             .row.generate-item-header.middle-xs
                                 .col-xs-2 Type:
                                 .col-xs-9
-                                    .generate-item.fa.fa-minus Task
+                                    .generate-item Task
+                                        span &#xf068
                                 .col-xs-1.fa.fa-angle-down.button.f-btn
                             .row
                                 .col-xs-12.generate-item-holder
-                                    span.generate-item.fa.fa-plus  All
-                                    span.generate-item.fa.fa-plus  Message
-                                    span.generate-item.fa.fa-plus  Event
+                                    span.generate-item All
+                                        span &#xf067
+
+                                    span.generate-item Message
+                                        span &#xf067
+                                    span.generate-item  Event
+                                        span &#xf067
                             .row.generate-item-header.middle-xs
                                 .col-xs-2 User:
                                 .col-xs-9
