--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -1,6 +1,6 @@
 .reports-wrapper
     .row.center-xs
-        .col-xs-10.reports-holder
+        .col-xs-12.col-md-10.reports-holder
             .row.reports-header
                 h3.col-xs-10 Reports
                 .col-xs-1.col-xs-offset-1.fa.fa-close.button.font-button
@@ -26,7 +26,7 @@
                                 td.col-xs-2 16/08/2016
                                 td.col-xs-2
                                     .row.around-xs
-                                        span.col-xs-4.fa.fa-folder-open-o.button.f-btn
+                                        span.col-xs-4.fa.fa-eye.button.f-btn
                                         span.col-xs-4.fa.fa-trash.button.f-btn
                     .row
                         .col-xs-1.col-xs-offset-11.button.btn More
