--- a/frontend/components/reports/reportsStyle.css
+++ b/frontend/components/reports/reportsStyle.css
@@ -110,6 +110,9 @@
   border-bottom: 1px solid #adadad;
 }
 .reports-wrapper .generate-holder .generate-item {
+  position: relative;
+  width: -webkit-fit-content;
+  text-indent: 2%;
   cursor: pointer;
   background-color: #f2992e;
   padding: 1%;
@@ -120,9 +123,12 @@
   font-family: "Open Sans";
   color: #000;
 }
-.reports-wrapper .generate-holder .generate-item::before {
+.reports-wrapper .generate-holder .generate-item span {
+  text-indent: 1%;
+  position: absolute;
+  left: 0;
   color: #1d8dbf;
-  display: inline;
+  display: inline-block;
   font-family: "FontAwesome";
 }
 .reports-wrapper .button {
