Report Component Init

--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -43,7 +43,7 @@
                                     .col-xs-8.item-title Daily report
                                     .col-xs-4
                                         .row.around-xs
-                                            span.col-xs-5.fa.fa-folder-open-o.button.f-btn
+                                            span.col-xs-5.fa.fa-eye.button.f-btn
                                             span.col-xs-5.fa.fa-trash.button.f-btn
                                 hr
                                 .row.start-xs.item-row
