Some task component update + creating of user list directive Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/public/libs/css/generalComponentsStyle.styl
+++ b/public/libs/css/generalComponentsStyle.styl
@@ -4,6 +4,8 @@ shadow-grey = #808080
 main-text-color = #212121
 add-text-color = #F2992E
 main-blue = #1d8dbf
+html
+    overflow-y scroll
 button()
     box-shadow 0px 0px 10px 0px grey
     display flex
