--- a/frontend/components/tasks/tasksTemplate.pug
+++ b/frontend/components/tasks/tasksTemplate.pug
@@ -13,14 +13,26 @@
 				li time left
 				li keyword =  
 					input(type="text")
-		.wrapper_task.row.center-xs(ng-repeat = "task in tasksctrl.tasks track by $index")
-			.task_progress.col-xs-3
-				.content(ng-if = "task.toDoList.length") Proress: {{task.progress}}/{{task.toDoList.length}}
-			.title.col-xs-5 {{task.title}}
-			.expander.col-xs-3
-				i.fa.fa-arrow-down(aria-hidden = "true")
-			.task_todos.col-xs-12
-				.toDo.row.start-xs(ng-repeat = "todo in task.toDoList")
-					input.col-xs-1(type="checkbox")
+		.wrapper_task.row.center-xs(ng-repeat = "task in tasksctrl.tasks track by $index" ng-if = "tasksctrl.contentFlag")
+			.col-xs-12.task_header.row.middle-xs.center-xs
+				.task_progress.col-xs-3
+					.content(ng-if = "task.toDos.length") Progress: 
+						.span.countProgress(ng-if = "!task.isFinished") {{task.progress}}/{{task.toDos.length}}
+						.span.countProgress.complete(ng-if = "task.isFinished") Complete!
+				.title.col-xs-5 {{task.title}}
+				.expander.col-xs-3
+					i.fa(aria-hidden = "true", ng-click = "task.expanded = !task.expanded",ng-class="{'fa-arrow-down': !task.expanded, 'fa-arrow-up': task.expanded}")
+			.task_todos.col-xs-12.animate-expand(ng-if="task.expanded")
+				.row.start-xs
+					.task_itemLable.col-xs-offset-1.col-xs-11 Task description:
+					.task_description.col-xs-offset-1.col-xs-10 {{task.description}}
+					.task_itemLable.col-xs-offset-1.col-xs-10 Participants:
+						.task_Participant(ng-repeat = "user in task.participants track by $index") {{user.firstName}} {{user.lastName || ""}}
+				.toDo.row.start-xs(ng-repeat = "todo in task.toDos track by $index")
+					.col-xs-1.toDo_status
+						i.fa(aria-hidden = "true",ng-class = "{'fa-square-o': todo.status === 'uncomplete','fa-check-square-o': todo.status === 'complete'}",ng-click="tasksctrl.changeToDoState(todo,task)")
 					.toDo_title.col-xs-8 {{todo.title}}
-					.toDo_dedcription.col-xs-offset-1.col-xs-8.col-xs-offset-3 {{todo.description}}
+					.toDo_description.col-xs-offset-1.col-xs-10 {{todo.description}}
+		.wrapper_noTask.row.center-xs(ng-if = "!tasksctrl.contentFlag")
+			.col-xs-12 No tasks in this project
+		user-list(user-data = `tasksctrl.projUsers`,select-callback = 'tasksctrl.selectUser')
